Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
3.0.0, 3.0.1, 3.0.2, 3.1.0, 3.1.1, 3.1.2, 3.1.3, 3.1.4
-
None
Description
XSObject::getNamespace is declared non-const, which is wrong, but also triggers method override warnings on Solaris.
I think the subclass that redeclaring that method as pure virtual (and const) is a little fishy, but the compiler understands the situation well enough as long as the method signatures match.