XERCESC-2112 - PSVI XSObject getNamespace method should be const

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@1804272 13f79535-47bb-0310-9956-ffa450edef68